# ubuntu-pro-for-wsl

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .golangci-lint.yaml  .golangci-linux.yaml  .golangci-ubuntu.yaml  .golangci-windows.yaml  .golangci.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  build.ps1  codecov.yml  go.work  go.work.sum
.configurations/: dev.dsc.yaml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/deb-build-docker/: Dockerfile
.github/instructions/: translation-review.instructions.md
.github/workflows/: auto-update-modules.yaml  auto-updates.yaml  automatic-doc-checks.yml  autoupdate-structurizr-diagrams.yml  chocolatey.yaml  cla-check.yaml  end-to-end.yaml  on-release-published.yaml  osv.yaml  publish-msix.yaml  qa-azure.yaml  qa.yaml  structurizr-diagrams-update.yml  translations.yaml  validate-pr-title.yaml  wiki-repo-sync.yaml
agent-api/: agentapi.pb.go  agentapi.proto  agentapi_grpc.pb.go  generate.sh  generator_linux.go  generator_windows.go  go.mod  go.sum
agentapi/: agentapi.pb.go  agentapi.proto  agentapi_grpc.pb.go  generate.ps1  generate.sh  generator_linux.go  generator_windows.go  go.mod  go.sum  import_genproto.go
agentapi/dart/: pubspec.yaml
agentapi/go/: agentapi.pb.go  agentapi_grpc.pb.go
common/: consts.go  go.mod  go.sum  utils.go  utils_test.go  version.go
common/autocompletiondocumentation/: generate_autocompletion_documentation.go
common/certs/: certs.go  certs_test.go
common/generators/: can_modify_repo.go  common_test.go  copy.go
common/golden/: golden.go
common/i18n/: generate-locales.go  i18n.go  i18n_test.go
common/testdetection/: integrationtests.go  testdetection.go  testdetection_test.go
common/testutils/: golden.go  set.go  set_test.go  testutils.go
common/wsltestutils/: wsl.go  wsl_linux.go  wsl_windows.go
contractsapi/: contractsapi.go  go.mod
doc/: 01.-Welcome.md  02.-Installation.md  02.Installation.md  2.-Windows-Agent-command-line-reference.md  3.-WSL-Pro-Service-command-line-reference.md  Home.md  doc.go
docs/: .custom_wordlist.txt  .gitignore  .readthedocs.yaml  .wordlist.txt  02-install.md  03-enable-pro.md  03-restart.md  04-attach-landscape.md  04-enable-pro.md  05-attach-landscape.md  05-windows-agent-command-line-reference.md  06-access-the-logs.md  06-wsl-pro-service-command-line-reference.md  Makefile  build_requirements.py  conf.py  custom_conf.py  dev_docs_notice.txt  index.md  install.md  pro_content_notice.txt  requirements.txt  workspace.dsl  wsl-pro-service-command-line-reference.md
docs/.sphinx/: build_requirements.py  requirements.txt  spellingcheck.yaml
docs/dev/: index.md
docs/diagrams/: readme.md  structurizr-ContainerComponents-key.puml  structurizr-ContainerComponents.puml  structurizr-SystemContainers-key.puml  structurizr-SystemContainers.puml  structurizr-SystemContext-key.puml  structurizr-SystemContext.puml  structurizr-SystemLandscape.puml  structurizr-UP4WTutorial-key.puml  structurizr-UP4WTutorial.puml  structurizr-UbuntuProForWSL.puml
docs/explanation/: binfmt.md  compare-wsl-versions.md  data-collection.md  index.md  pro-explanation.md  ref-arch-explanation.md  security-overview.md  time-sync.md
docs/howto/: 02-install.md  03-restart.md  06-access-the-logs.md  07-toggle-features.md  attach-landscape.md  backup-and-restore.md  cloud-init.md  contributing.md  custom-rootfs-multiple-targets.md  custom-ubuntu-distro.md  data-science-and-engineering.md  deploy-with-landscape-web-portal.md  enforce-agent-startup-remotely-registry.md  gpu-cuda.md  index-contributing.md  index-gpu-and-graphics.md  index-remote-deployment.md  index-setup.md  index.md  install-ubuntu-wsl2.md  install.md  manage-and-configure.md  pro-attach.md  reset-factory.md  reuse-me  run-workflows-azure.md  set-up-landscape-client.md  set-up-landscape-server-in-wsl.md  set-up-up4w.md  start-agent-remotely.md  uninstalling.md  upgrade-ubuntu.md  verify-subscribe-attach.md
docs/includes/: pro_content_notice.txt  prompt_symbols_notice.txt  virtualisation_requirements.txt
docs/reference/: 07-windows-agent-command-line-reference.md  08-wsl-pro-service-command-line-reference.md  09-qa-process-reference.md  actions.md  distributions.md  firewall_requirements.md  glossary.md  glossary_up4w_components.md  index.md  index_system_configuration.md  index_up4w_components.md  index_up4w_development.md  instance_configuration.md  landscape.md  (+19 more)
end-to-end/: build-appx.ps1  build-deb.ps1  cloud_init_test.go  go.mod  go.sum  happy_path_test.go  landscape_utils_test.go  main_test.go  manual_token_input_test.go  organization_token_test.go  purchase_test.go  utils_test.go
generate/: generate_autocompletion_documentation.go  generate_locales.go  go.mod  go.sum
gui/: .gitignore  README.md  analysis_options.yaml
launcher/: CMakeLists.txt
mocks/: README.md  go.mod  go.sum
msix/: .gitignore  Package.appxmanifest  SBConfig.json  Ubuntu Pro For Windows.sln  UbuntuProForWSL.appinstaller  msix.sln
po/: ca_ES.po  ubuntu-pro.pot
storeapi/: README.md
storeapi/dll/: CMakeLists.txt  StoreApi.hpp  framework.hpp
storeapi/test/: CMakeLists.txt  ClientStoreServiceTest.cpp  MockTest.cpp  ServerStoreServiceTest.cpp  StoreServiceTest.cpp  stubs.hpp  testcase.yaml
tools/: flutter-version  go.mod  go.sum  tools.go  versions.json
version/: go.mod  version.go
windows-agent/: README.md  go.mod  go.sum  go.sum.orig
windows-service/: CMakeLists.txt  app.hpp  eventlog.hpp  firmware.hpp  main.cpp  pipe.hpp  protocol.h  security.hpp  service_control.hpp  token.hpp  utility.hpp
windows-service/tests/: firmware_test.cpp  pipe_test.cpp  protocol_test.cpp  security_test.cpp  test_main.cpp  token_test.cpp
wsl-pro-service/: README.md  go.mod  go.sum
wslserviceapi/: generate.ps1  generate.sh  generator_linux.go  generator_windows.go  go.mod  go.sum  wslserviceapi.pb.go  wslserviceapi.proto  wslserviceapi_grpc.pb.go
(+592 files in other folders)
